--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,11 +4,21 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
     "log4js": "^6.8.0",
-    "mongoose": "^6.10.0"
+    "moment": "^2.29.4",
+    "mongoose": "^6.10.0",
+    "nodemailer": "^6.9.1",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run": "node app.js"
   },
   "author": "",
   "license": "ISC"
