--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "@azure/msal-node": "^1.16.0",
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "cookie-session": "^2.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "log4js": "^6.8.0",
     "moment": "^2.29.4",
     "mongoose": "^6.10.0",
